Created delete method functionality

--- a/app/src/main/res/layout/activity_add_task_screen.xml
+++ b/app/src/main/res/layout/activity_add_task_screen.xml
@@ -57,4 +57,12 @@
         android:text="Add"
         android:textAllCaps="false" />
 
+    <Button
+        android:id="@+id/update_btn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:backgroundTint="#00BCD4"
+        android:text="Update"
+        android:textAllCaps="false" />
+
 </LinearLayout>
