--- a/app/src/main/res/layout/activity_take_list_screen.xml
+++ b/app/src/main/res/layout/activity_take_list_screen.xml
@@ -21,6 +21,6 @@
         android:backgroundTint="#00BCD4"
         android:gravity="center"
         android:text="Add"
-        android:textAllCaps="true" />
+        android:textAllCaps="false" />
 
 </LinearLayout>
